@startuml

hide empty description

title State chart (FSM) Cola Vending Machine\n

[*] --> InitialisedSubSystems : E_START / CVMinitialiseSubSystems()
InitialisedSubSystems : insertedMoney = 0
InitialisedSubSystems : priceCola = 125
InitialisedSubSystems : availableChange = 30
InitialisedSubSystems ---> WaitForCoins : E_CONTINUE [no init error(s)]
InitialisedSubSystems ---> [*] : E_CONTINUE [init error(s)] / CVMshutdownSubSystems()

WaitForCoins --> Detected_10C : E_10C
Detected_10C : insertedMoney += 10
Detected_10C --> WaitForCoins : E_NOT_ENOUGH
Detected_10C --> Dispense : E_ENOUGH / CVMcheckChange()

WaitForCoins --> Detected_20C : E_20C
Detected_20C : insertedMoney += 20
Detected_20C --> WaitForCoins : E_NOT_ENOUGH
Detected_20C --> Dispense :  E_ENOUGH / CVMcheckChange()

Dispense --> WaitForUpdateChange: E_NO_CHANGEDISPENSE /	CHDdispenseChange(insertedMoney)
WaitForUpdateChange --> WaitForCoins

Dispense --> WaitForCoins :  E_CHANGEDISPENSE / CLDdispenseCola(); CHDdispenseChange(change)

note right of InitialisedSubSystems
    All subsystems in CVM initialised
end note

note left of InitialisedSubSystems #red
    All currency values in cents
end note

@enduml
